# avx-optimization

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
benchmarks/math/: vector.cpp
cmake/: Benchmark.cmake  Test.cmake
src/check/: enable.h  types.h
src/math/: add.h  div.h  macro.h  multiplication.h  sub.h  vector.h
src/memory/: aligment.h  alignment.h  malloc_size.h
tests/: alignment.cpp
tests/check/: enable.cpp  types.cpp
tests/math/: vector.cpp
tests/memory/: alignment.cpp
